--- a/index.html
+++ b/index.html
@@ -18,15 +18,71 @@
   </head>
   <body>
     <main class="main">
-      How many team members can I invite? You can invite up to 2 additional
-      users on the Free plan. There is no limit on team members for the Premium
-      plan. What is the maximum file upload size? No more than 2GB. All files in
-      your account must fit your allotted storage space. How do I reset my
-      password? Click “Forgot password” from the login page or “Change password”
-      from your profile page. A reset link will be emailed to you. Can I cancel
-      my subscription? Yes! Send us a message and we’ll process your request no
-      questions asked. Do you provide additional support? Chat and email support
-      is available 24/7. Phone lines are open during normal business hours.
+      <div class="card-hero-container">
+        <img src="images/illustration-woman-online-mobile.svg" alt="" />
+        <img src="images/bg-pattern-mobile.svg" alt="" />
+      </div>
+      <div class="card-body-container">
+        <h1 class="card-header">FAQ</h1>
+        <div class="faq-card">
+          <a href="#" class="faq-card-title"
+            >How many team members can I invite?</a
+          >
+          <!-- <p class="faq-card-desc">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nihil
+            incidunt perferendis suscipit atque, fuga eligendi voluptates
+            blanditiis laboriosam labore aperiam in hic reiciendis inventore
+            earum sed voluptatibus iste eos.
+          </p> -->
+          <img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
+        </div>
+        <div class="faq-card open">
+          <a href="#" class="faq-card-title"
+            >What is the maximum file upload size?</a
+          >
+          <p class="faq-card-desc">
+            No more than 2GB. All files in your account must fit your allotted
+            storage space.
+          </p>
+          <img
+            class="faq-card-icon icon-open"
+            src="images/icon-arrow-down.svg"
+            alt=""
+          />
+        </div>
+        <div class="faq-card">
+          <a href="#" class="faq-card-title">How do I reset my password?</a>
+          <!-- <p class="faq-card-desc">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nihil
+            incidunt perferendis suscipit atque, fuga eligendi voluptates
+            blanditiis laboriosam labore aperiam in hic reiciendis inventore
+            earum sed voluptatibus iste eos.
+          </p> -->
+          <img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
+        </div>
+        <div class="faq-card">
+          <a href="#" class="faq-card-title">Can I cancel my subscription?</a>
+          <!-- <p class="faq-card-desc">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nihil
+            incidunt perferendis suscipit atque, fuga eligendi voluptates
+            blanditiis laboriosam labore aperiam in hic reiciendis inventore
+            earum sed voluptatibus iste eos.
+          </p> -->
+          <img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
+        </div>
+        <div class="faq-card">
+          <a href="#" class="faq-card-title"
+            >Do you provide additional support?</a
+          >
+          <!-- <p class="faq-card-desc">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nihil
+            incidunt perferendis suscipit atque, fuga eligendi voluptates
+            blanditiis laboriosam labore aperiam in hic reiciendis inventore
+            earum sed voluptatibus iste eos.
+          </p> -->
+          <img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
+        </div>
+      </div>
     </main>
     <footer class="attribution">
       Challenge by
