--- a/index.html
+++ b/index.html
@@ -1,95 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<!-- displays site properly based on user's device -->
 
-    <title>Frontend Mentor | FAQ Accordion Card</title>
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <main class="main">
-      <div class="card-hero-container">
-        <img src="images/illustration-woman-online-mobile.svg" alt="" />
-        <img src="images/bg-pattern-mobile.svg" alt="" />
-      </div>
-      <div class="card-body-container">
-        <h1 class="card-header">FAQ</h1>
-        <div class="faq-card">
-          <a href="#" class="faq-card-title"
-            >How many team members can I invite?</a
-          >
-          <!-- <p class="faq-card-desc">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nihil
-            incidunt perferendis suscipit atque, fuga eligendi voluptates
-            blanditiis laboriosam labore aperiam in hic reiciendis inventore
-            earum sed voluptatibus iste eos.
-          </p> -->
-          <img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
-        </div>
-        <div class="faq-card open">
-          <a href="#" class="faq-card-title"
-            >What is the maximum file upload size?</a
-          >
-          <p class="faq-card-desc">
-            No more than 2GB. All files in your account must fit your allotted
-            storage space.
-          </p>
-          <img
-            class="faq-card-icon icon-open"
-            src="images/icon-arrow-down.svg"
-            alt=""
-          />
-        </div>
-        <div class="faq-card">
-          <a href="#" class="faq-card-title">How do I reset my password?</a>
-          <!-- <p class="faq-card-desc">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nihil
-            incidunt perferendis suscipit atque, fuga eligendi voluptates
-            blanditiis laboriosam labore aperiam in hic reiciendis inventore
-            earum sed voluptatibus iste eos.
-          </p> -->
-          <img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
-        </div>
-        <div class="faq-card">
-          <a href="#" class="faq-card-title">Can I cancel my subscription?</a>
-          <!-- <p class="faq-card-desc">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nihil
-            incidunt perferendis suscipit atque, fuga eligendi voluptates
-            blanditiis laboriosam labore aperiam in hic reiciendis inventore
-            earum sed voluptatibus iste eos.
-          </p> -->
-          <img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
-        </div>
-        <div class="faq-card">
-          <a href="#" class="faq-card-title"
-            >Do you provide additional support?</a
-          >
-          <!-- <p class="faq-card-desc">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nihil
-            incidunt perferendis suscipit atque, fuga eligendi voluptates
-            blanditiis laboriosam labore aperiam in hic reiciendis inventore
-            earum sed voluptatibus iste eos.
-          </p> -->
-          <img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
-        </div>
-      </div>
-    </main>
-    <footer class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://www.austinthornley.com">Austin Thornley</a>.
-    </footer>
-    <script src="script.js"></script>
-  </body>
+	<title>Frontend Mentor | FAQ Accordion Card</title>
+
+	<link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+	<main class="main">
+		<div class="card-hero-container">
+			<img src="images/illustration-woman-online-mobile.svg" alt="" />
+			<img src="images/bg-pattern-mobile.svg" alt="" class="bg-mobile" />
+		</div>
+		<div class="card-body-container">
+			<h1 class="card-header">FAQ</h1>
+			<div class="faq-card">
+				<a href="#" class="faq-card-title">How many team members can I invite?</a>
+				<p class="faq-card-desc hidden">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nihil
+					incidunt perferendis suscipit atque, fuga eligendi voluptates
+					blanditiis laboriosam labore aperiam in hic reiciendis inventore
+					earum sed voluptatibus iste eos.
+				</p>
+				<img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
+			</div>
+			<div class="faq-card">
+				<!-- open class -->
+				<a href="#" class="faq-card-title">What is the maximum file upload size?</a>
+				<p class="faq-card-desc hidden">
+					No more than 2GB. All files in your account must fit your allotted
+					storage space.
+				</p>
+				<img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
+				<!-- icon-open class -->
+			</div>
+			<div class="faq-card">
+				<a href="#" class="faq-card-title">How do I reset my password?</a>
+				<p class="faq-card-desc hidden">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nihil
+					incidunt perferendis suscipit atque, fuga eligendi voluptates
+					blanditiis laboriosam labore aperiam in hic reiciendis inventore
+					earum sed voluptatibus iste eos.
+				</p>
+				<img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
+			</div>
+			<div class="faq-card">
+				<a href="#" class="faq-card-title">Can I cancel my subscription?</a>
+				<p class="faq-card-desc hidden">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nihil
+					incidunt perferendis suscipit atque, fuga eligendi voluptates
+					blanditiis laboriosam labore aperiam in hic reiciendis inventore
+					earum sed voluptatibus iste eos.
+				</p>
+				<img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
+			</div>
+			<div class="faq-card">
+				<a href="#" class="faq-card-title">Do you provide additional support?</a>
+				<p class="faq-card-desc hidden">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nihil
+					incidunt perferendis suscipit atque, fuga eligendi voluptates
+					blanditiis laboriosam labore aperiam in hic reiciendis inventore
+					earum sed voluptatibus iste eos.
+				</p>
+				<img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
+			</div>
+		</div>
+	</main>
+	<footer class="attribution">
+		Challenge by
+		<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
+			href="https://www.austinthornley.com">Austin Thornley</a>.
+	</footer>
+	<script src="script.js"></script>
+</body>
+
 </html>
