--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				</p>
 				<img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
 			</div>
+			<div class="line"></div>
 			<div class="faq-card">
 				<!-- open class -->
 				<a href="#" class="faq-card-title">What is the maximum file upload size?</a>
@@ -41,6 +42,7 @@
 				<img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
 				<!-- icon-open class -->
 			</div>
+			<div class="line"></div>
 			<div class="faq-card">
 				<a href="#" class="faq-card-title">How do I reset my password?</a>
 				<p class="faq-card-desc hidden">
@@ -51,6 +53,7 @@
 				</p>
 				<img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
 			</div>
+			<div class="line"></div>
 			<div class="faq-card">
 				<a href="#" class="faq-card-title">Can I cancel my subscription?</a>
 				<p class="faq-card-desc hidden">
@@ -61,6 +64,7 @@
 				</p>
 				<img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
 			</div>
+			<div class="line"></div>
 			<div class="faq-card">
 				<a href="#" class="faq-card-title">Do you provide additional support?</a>
 				<p class="faq-card-desc hidden">
@@ -71,6 +75,7 @@
 				</p>
 				<img class="faq-card-icon" src="images/icon-arrow-down.svg" alt="" />
 			</div>
+			<div class="line"></div>
 		</div>
 	</main>
 	<footer class="attribution">
